# system-governance-framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  GEMINI.md  GOVERNANCE_ANALYSIS.md  MAINTAINERS.md  README.md  ROADMAP.md  ecosystem.yaml  network-map.yaml  package.json  pyproject.toml  seed.yaml
.Jules/: palette.md
.github/: AI_HANDOFF_FOOTER.md  AI_HANDOFF_HEADER.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/detect-languages/: action.yml
.github/agents/: README.md  coordinator.yml
.github/configs/: markdown-link-check.json
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  enhanced-pr-quality.yml  license-check.yml  release-drafter.yml  release.yml  repository-health-check.yml  reusable-ci.yml  security-audit.yml  semgrep.yml  stale-management.yml  stale.yml  standard-procedures.yaml  super-linter.yml
.jules/: bolt.md  sentinel.md
config/: schema.json
config/presets/: enterprise.yml  minimal.yml  standard.yml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
scripts/: install-framework.sh
src/: __init__.py  config.py  promotion.py  rules.py  validator.py
tests/: test_config.py  test_promotion.py  test_rules.py  test_validator.py  verify_input_validation.sh
(+4 files in other folders)
